fixes alignment of card actions

--- a/recipes/src/components/recipeList/recipecard.scss
+++ b/recipes/src/components/recipeList/recipecard.scss
@@ -14,4 +14,5 @@
     display: flex;
     flex-wrap: nowrap;
     justify-content: center;
+    align-items: center;
 }
